# libsimple

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
cmrc/pinyin.txt/: lib.cpp
examples/: hello.rs
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
src/: ffi.rs  lib.rs
