[package]
name = "libsimple"
version = "0.3.4"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "Rust bindings to simple, a SQLite3 fts5 tokenizer which supports Chinese and PinYin."
readme = "README.md"
license = "MIT"
repository = "https://github.com/xuxiaocheng0201/libsimple/"
documentation = "https://docs.rs/libsimple/"
categories = ["database"]
keywords = ["sqlite", "extension", "sqlite-extension", "fts5", "tokenizer"]

include = [
    "/Cargo.toml",
    "/README.md",
    "/src",
    "/build.rs",
    "/examples",

    "/cmrc",
    "/cppjieba/include",
    "/cppjieba/dict",
    "!/cppjieba/dict/pos_dict",
    "/cppjieba/deps/limonp/include",
    "/simple/src",
    "/simple/contrib/sqlite3",

    "**/LICENSE",
    "!**/*.cmake",
    "!**/CMakeLists.txt"
]

[features]
default = ["jieba"]
jieba = []

[build-dependencies]
cc = { version = "^1.1", features = ["parallel"] }

[dependencies]
rusqlite = "~0.32"
better_embedded = "~0.4"

[dev-dependencies]
anyhow = "^1.0"
rusqlite = { version = "~0.32", features = ["bundled-sqlcipher"] }
tempfile = "^3.13"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "hello"
